css/home.css
/* ---------- Navbar ---------- */

.navbar-page {
  width: 100%;
  position: fixed;
  top: 0;
  height: 70px;
  transition: 0.3s ease-in-out;
  z-index: 98 !important;
}
.navbar-inner-wrapper {
  width: 100%;
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.navbar-logo img {
  width: 60px;
}
.navbar-menu-wrapper {
  display: flex;
  align-items: center;
  gap: 1.5rem;
  position: relative;
  /* z-index: 9999999999999999999 !important; */
}
.nav-menu-all {
  display: flex;
  gap: 3rem;
}
.nav-menu-all li,
.nav-menu-all li a {
  text-decoration: none;
  color: #fff;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}
.nav-menu-all li > div:hover,
.nav-menu-all li a:hover {
  color: #fdae1e;
}
.navbar-menu-sub-items {
  width: 150px;
  position: absolute;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 0 !important;
  margin-top: 1.5rem !important;
  line-height: 2rem;
  height: 0;
  overflow: hidden;
  transition: 0.2s ease-in-out;
}
.navbar-menu-sub-items li a {
  color: #222;
}
.nav-menu-all li div {
  transition: 0.3s ease-in-out;
}
.navbar-menu-list {
  display: none;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 4px;
  cursor: pointer;
}
.navbar-menu-list div {
  width: 5px;
  height: 5px;
  background: #fff;
  border-radius: 100px;
  transition: 0.3s ease-in-out;
}
.navbar-menu-list:hover div {
  background: #fdae1e;
}
.navbar-menu-social a {
  display: flex;
  align-items: center;
  text-decoration: none;
}
.navbar-menu-social a i {
  color: #fff;
  font-size: 24px;
  transition: 0.3s ease-in-out;
}
.navbar-menu-social a i:hover {
  color: #fdae1e;
}
.icon-close-sidebar {
  width: 24px;
  height: 24px;
  position: absolute;
  top: 1.6rem;
  right: 1rem;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  display: none;
}
.icon-close-sidebar .line1 {
  width: 22px;
  height: 1px;
  background: #fff;
  transform: rotate(45deg);
  transition: 0.3s ease-in-out;
}
.icon-close-sidebar .line2 {
  width: 22px;
  height: 1px;
  background: #fff;
  transform: rotate(90deg);
  transition: 0.3s ease-in-out;
}
.icon-close-sidebar:hover .line1 {
  background: #fdae1e;
}
.icon-close-sidebar:hover .line2 {
  background: #fdae1e;
}
@media screen and (max-width: 768px) {
  .navbar-menu-list {
    display: grid;
  }
  .navbar-menu-social {
    display: none;
  }
  .nav-menu-all {
    position: fixed;
    top: 0;
    left: 1000px;
    background-color: rgba(0, 0, 0, 0.88);
    padding: 4rem 2rem !important;
    width: 300px;
    flex-direction: column;
    gap: 1.6rem;
    transition: 0.4s ease-in-out;
    z-index: 9999999999999999999 !important;
  }
  .navbar-menu-sub-items {
    position: relative;
    margin-top: 0 !important;

    background: none;
  }
  .navbar-menu-sub-items li a {
    color: #fff;
  }
}

/* ---------- Navbar ---------- */

/* ---------- Banner ---------- */

.carousel {
  position: static !important;
}
.carousel-indicators {
  right: auto !important;
  opacity: 1 !important;
  bottom: 2rem !important;
  z-index: 9 !important;
}
.carousel-indicators [data-bs-target] {
  opacity: 1 !important;
  height: 4px !important;
}
.carousel-indicators .active {
  background-color: #fdae1e !important;
}

.banner-img-1,
.banner-img-2,
.banner-img-3,
.banner-img-4,
.banner-img-5,
.banner-img-6 {
  width: 100vw;
  height: 100vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.banner-img-1 {
  background-image: url('../asset/home/banner/banner1.png');
}
.banner-img-2 {
  background-image: url('../asset/home/banner/banner2.jpg');
}
.banner-img-3 {
  background-image: url('../asset/home/banner/banner3.jpg');
}
.banner-img-4 {
  background-image: url('../asset/home/banner/banner4.png');
}
.banner-img-5 {
  background-image: url('../asset/home/banner/banner5.jpg');
}
.banner-img-6 {
  background-image: url('../asset/home/banner/banner6.jpg');
  background-position: 50% 100% !important;
}
.banner-text-name {
  position: absolute;
  bottom: 8%;
  right: 15%;
  font-size: 66px;
  color: #fff;
  font-weight: 600;
  opacity: 0.9;
}
.banner-text-sub {
  position: absolute;
  bottom: 4%;
  right: 15%;
  font-size: 20px;
  color: #fff;
  opacity: 0.9;
}
@media screen and (max-width: 1500px) {
  .banner-text-name {
    right: 8%;
    bottom: 12%;
  }
  .banner-text-sub {
    right: 8%;
    bottom: 8%;
  }
}
@media screen and (max-width: 1180px) {
  .banner-text-name {
    right: 5%;
  }
  .banner-text-sub {
    right: 5%;
  }
}
@media screen and (max-width: 768px) {
  .carousel-indicators {
    right: 0 !important;
  }
  .banner-text-name {
    bottom: 20%;
    right: 50%;
    transform: translateX(50%);
    font-size: 66px;
  }
  .banner-text-sub {
    text-align: center;
    width: 88%;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
    font-size: 20px;
  }
}
@media screen and (max-width: 550px) {
  .banner-text-name {
    font-size: 54px;
  }
}
@media screen and (max-width: 440px) {
  .banner-text-name {
    font-size: 44px;
  }
}

/* ---------- Banner ---------- */

/* ---------- About ---------- */

.about-page {
  width: 100%;
  background: #363636;
  padding: 5rem 0;
}
.about-inner-wrapper {
  text-align: center;
}
.about-topic {
  color: #fdae1e;
  font-size: clamp(22pt, 2.5vw, 34pt);
  font-weight: 100;
}
.about-topic b {
  font-size: clamp(22pt, 2.5vw, 34pt);
  font-weight: 600;
}
.about-items-wrapper {
  margin-top: 8rem;
  margin-bottom: 6rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  align-items: center;
  /* position: relative; */
}
.about-image-wrapper {
  position: relative;
  left: 50%;
  top: 0;
  transition: 0.4s ease-in-out;
}
.about-image-wrapper img {
  display: block;
  width: 100%;
}
/* ... */

